[package]
name = "automated-gutenberg-prs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.13"
reqwest = "0.11.6"
tokio = { version = "1.13.0", features = ["full"] }
futures = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

